[gd_scene load_steps=6 format=3 uid="uid://bd1aml5odct3r"]

[ext_resource type="Script" uid="uid://dca4wlqon1uad" path="res://scenes/main/main.gd" id="1_2dg70"]
[ext_resource type="PackedScene" uid="uid://b0o6vv18wbqbu" path="res://scenes/player/player.tscn" id="3_1a7os"]
[ext_resource type="PackedScene" uid="uid://c4ijn8nywwqp" path="res://scenes/walls/walls.tscn" id="3_nqko8"]
[ext_resource type="PackedScene" uid="uid://dfgdl4tg41a5l" path="res://scenes/laser/laser.tscn" id="4_7v8bt"]
[ext_resource type="PackedScene" uid="uid://dd5lma1ou8ytr" path="res://autoload/global.tscn" id="6_83tlt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2dg70")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -2.0
offset_right = 1920.0
offset_bottom = 1078.0
color = Color(0.172106, 0.0795399, 0.307343, 1)

[node name="Laser" parent="ColorRect" instance=ExtResource("4_7v8bt")]
position = Vector2(0, 2)

[node name="Walls" parent="ColorRect" instance=ExtResource("3_nqko8")]
visible = false
position = Vector2(0, 2)

[node name="PLayer" parent="ColorRect" instance=ExtResource("3_1a7os")]
position = Vector2(0, 2)

[node name="ScoreLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -522.0
offset_right = -246.0
offset_bottom = -467.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Score : "

[node name="Score" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 1680.0
offset_top = 18.0
offset_right = 1704.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 40
text = "0
"

[node name="LevelLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.504
anchor_bottom = 0.002
offset_left = 256.0
offset_top = 18.0
offset_right = 369.32
offset_bottom = 70.84
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Level: "

[node name="Level" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.504
anchor_bottom = 0.002
offset_left = 392.0
offset_top = 18.0
offset_right = 505.32
offset_bottom = 70.84
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "1"

[node name="GameOver" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "Game Over!"

[node name="Global" parent="." instance=ExtResource("6_83tlt")]

[connection signal="start_game" from="ColorRect/PLayer" to="." method="_on_start_button_pressed"]
[connection signal="enemy_died" from="Global" to="." method="on_enemy_died"]
